--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			height: 500px;
 			margin: auto;
 			border: solid 2px yellow;
-			background-color: #33cc33;
+			background-color: #ff0000;
 			border-radius: 50%;
 			position: relative;
 		}
