Background became blue

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>clock</title>
 	<style>
@@ -8,7 +8,7 @@
 			height: 500px;
 			margin: auto;
 			border: solid 2px yellow;
-			background-color: #33cc33;
+			background-color: #0700cc;
 			border-radius: 50%;
 			position: relative;
 		}
